overflow-x ugly fix

--- a/src/base/base.scss
+++ b/src/base/base.scss
@@ -1,5 +1,5 @@
 body {
   margin: 0;
   padding: 0;
-  //font-size: 10px;
+  overflow-x: hidden;
 }
